src/main/java/com/example/error/ForbiddenOperationException.java
package com.example.error;

/**
 * 操作がリクエスト元に許可されていない場合のドメイン例外。
 */
public class ForbiddenOperationException extends RuntimeException {
}
